# sp23-hw2

./: README.md  main.py  mnk_configs.yaml  mnk_game.py  pyproject.toml  utils.py
hw2/: mnk_game.py  utils.py
