[tool.poetry]
name = "hw2"
version = "0.1.0"
description = "COMS 4701 HW2"
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
hydra-core = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
